Fix small font on iPhone

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 * {margin: 0;}
 
+html {
+  font-size: 16px; /* this is typically the default size in browsers */
+}
 
 body {
   font-family: "Times New Roman", sans-serif;
-  font-size: 12pt;
+  font-size: medium;
   background-color: var(--color0);
   color: var(--color10);
   min-width: 500px; /* or whatever minimum width you desire */
@@ -71,7 +74,7 @@ p {
 .brief {
   text-align: center;
   max-width: 800px;
-  font-size: larger;
+  font-size: large;
 }
 
 .para-title {
